# hm-cupano

./: .bazelrc  .clang-format  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  bld  conda.bzl  expunge  laplacian.sh  laplacian_blend.sh  perf  requirements.txt  stitch_game.sh  toolchain_env.sh
bazel/: BUILD.bazel  dependencies.bzl  ffmpeg_extension.bzl  ffmpeg_repo.bzl
cupano/: __init__.py  canvas.py  geometry.py  masks.py  ops.py  pano.py  status.py  triton_ops.py
env/: install_deps.sh
hmcupano/: BUILD.bazel
scripts/: BUILD.bazel  benchmark_pano.py  compare_pano_parity.py  compare_pyramid_dumps.py  create_control_points.py  create_control_points_multi.py  dump_pano_pyramid.py  generate_seam.py  install_bazelisk.sh  install_compdb.sh  install_lightglue.sh
src/: BUILD.bazel  canvasManager.h  controlMasks.cpp  cudaBlend.cu  cudaImageAdjust.cu  cudaImageAdjust.h  cudaMakeFull.cu  cudaMakeFull.h  cudaMat.cpp  cudaMat.h  cudaMat.inl  cudaPano.cpp  cudaPano.h  cudaPano.inl  cudaRemap.cu  cudaRemap.h  cudaStatus.h  showImage.cpp
src/cuda/: BUILD.bazel  cudaBlend.cu  cudaBlend.h  cudaBlend3.cu  cudaBlend3.h  cudaBlend3_optimized.cu  cudaBlend3_test.cpp  cudaBlend4channels.cu  cudaBlendN.cu  cudaBlendN.h  cudaBlendN_test.cpp  cudaBlendShow.h  cudaFusedKernels3.cu  cudaFusedKernels3.h  cudaImageAdjust.cu  cudaImageAdjust.cuh  cudaMakeFull.cu  cudaMakeFull.h  cudaRemap.cu  cudaRemap.h  cudaStabilize.cu  cudaStatus.h  cudaTypes.h  cudaTypes_test.cpp  cudaUtils.cu  cudaUtils.cuh  cudaVulkanKernels.cpp  pthread_clock_compat.h
src/fpga/: AGENTS.md  BUILD.bazel  README.md  fpgaStitchPano.cpp  fpgaStitchPano.h  fpgaStitchPano_test.cpp  panoFpgaController.cpp  panoFpgaController.h  panoFpgaController_test.cpp  panoFpgaFixedPoint.h  panoFpgaPlan.cpp  panoFpgaPlan.h  panoFpgaPlan_test.cpp  panoFpgaRegs.h  panoFpgaRuntime.h  panoFpgaStatus.h  panoFpgaTypes.h
src/fpga/hdl/: AGENTS.md  pano_accel_top.v  pano_axi_single_read.v  pano_axi_single_write.v  pano_blend_core.v  pano_copy_roi_engine.v  pano_downsample2x2.v  pano_kernel_dispatch.v  pano_laplacian_core.v  pano_mmio_regs.v  pano_reconstruct_core.v  pano_remap_core.v  pano_two_image_assets_pipeline.v  run_iverilog_tests.sh  run_two_image_case.sh  zybo_pano_accel_top.v  zybo_pano_remap_engine.v
src/fpga/hdl/tb/: gen_two_image_assets_case.py  pano_blend_core_tb.v  pano_downsample2x2_tb.v  pano_reconstruct_core_tb.v  pano_two_image_assets_tb.v  parse_gem_output_vcd.py
src/gpu/: BUILD.bazel  gpu_gl_interop.h  gpu_runtime.h  vulkan_runtime_shim.h
src/pano/: BUILD.bazel  canvasManager.cpp  canvasManager.h  canvasManager3.cpp  canvasManager3.h  canvasManagerN.h  controlMasks.cpp  controlMasks.h  controlMasks3.cpp  controlMasks3.h  controlMasksN.cpp  controlMasksN.h  cudaGLWindow.cpp  cudaGLWindow.h  cudaMat.cpp  cudaMat.h  cudaMat.inl  cudaMat_basic_test.cpp  cudaPano.cpp  cudaPano.h  cudaPano.inl  cudaPano3.cpp  cudaPano3.h  cudaPano3.inl  cudaPano3_optimized.inl  cudaPano3_test.cpp  cudaPanoN.h  cudaPanoN.inl  cudaPanoN_test.cpp  cudaPano_test.cpp  cvTypes.h  glShowImage.cpp  glShowImage.h  matchSeam3_test.cpp  showImage.cpp  showImage.h
src/stable/: BUILD.bazel  FrameStabilizer.cu  FrameStabilizer.h  Stabilization.cpp  mk  r  video_stabilization.cu
src/utils/: BUILD.bazel  cudaBlendShow.cpp  cudaBlendShow.h  cudaGLWindow.cpp  cudaGLWindow.h  imageUtils.cpp  imageUtils.h  showImage.cpp  showImage.h
tests/: BUILD.bazel  ffmpeg_cuda_runtime_test.sh  opencv_backend_runtime_test.sh  stitch_three_videos.cpp  stitch_two_videos.cpp  testCudaBlend.cpp  testCudaBlend3.cpp  testCudaBlendN.cpp  testCudaBlendNHeaders.cpp
tests/python/: test_pytorch_pano.py  test_triton_backend.py
