load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "aarch64-linux-gnu",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64-linux-gnu",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "cuda_matrix",
    srcs = [
        "cudaMat.cpp",
        "showImage.cpp",
    ],
    hdrs = [
        "cudaMat.h",
        "cudaMat.inl",
        "showImage.h",
    ],
    copts = [
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//src/cuda:cuda_blend_cuda_lib",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "pano",
    srcs = [
        "canvasManager.cpp",
        "controlMasks.cpp",
    ],
    hdrs = [
        "canvasManager.h",
        "controlMasks.h",
    ],
    copts = [
    ],
    includes = ["."],
    linkopts = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cuda_pano",
    srcs = [
        "cudaPano.cpp",
    ],
    hdrs = [
        "cudaPano.h",
        "cudaPano.inl",
    ],
    copts = [
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":cuda_matrix",
        ":pano",
    ],
)

