cc_binary(
    name = "test_cuda_blend",
    srcs = [
        "testCudaBlend.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "stitch_two_videos",
    srcs = [
        "stitch_two_videos.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@ffmpeg_linux//:ffmpeg_libs", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "stitch_three_videos",
    srcs = [
        "stitch_three_videos.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@ffmpeg_linux//:ffmpeg_libs", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "test_cuda_blend3",
    srcs = [
        "testCudaBlend3.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "test_cuda_blend_n",
    srcs = [
        "testCudaBlendN.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano_n", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

sh_test(
    name = "ffmpeg_cuda_runtime_test",
    srcs = ["ffmpeg_cuda_runtime_test.sh"],
    args = ["$(location @ffmpeg_linux//:ffmpeg)"],
    data = [
        "@ffmpeg_linux//:ffmpeg",
        "@ffmpeg_linux//:runtime_libs",
    ],
    tags = [
        "local",
        "requires-gpu",
    ],
)
