cc_binary(
    name = "test_cuda_blend",
    srcs = [
        "testCudaBlend.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "@//:use_vulkan": [],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "stitch_two_videos",
    srcs = [
        "stitch_two_videos.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    target_compatible_with = select({
        "@//:use_hip": ["@platforms//:incompatible"],
        "@//:use_vulkan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["//src/pano:cuda_pano", "@ffmpeg_linux//:ffmpeg_libs", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "@//:use_vulkan": [],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "stitch_three_videos",
    srcs = [
        "stitch_three_videos.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    target_compatible_with = select({
        "@//:use_hip": ["@platforms//:incompatible"],
        "@//:use_vulkan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["//src/pano:cuda_pano", "@ffmpeg_linux//:ffmpeg_libs", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "@//:use_vulkan": [],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "test_cuda_blend3",
    srcs = [
        "testCudaBlend3.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "@//:use_vulkan": [],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

cc_binary(
    name = "test_cuda_blend_n",
    srcs = [
        "testCudaBlendN.cpp",
    ],
    linkopts = [
        "-ltiff",
        "-lopencv_imgproc",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/pano:cuda_pano_n", "@opencv_linux//:opencv"]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "@//:use_vulkan": [],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        }),
)

sh_test(
    name = "ffmpeg_cuda_runtime_test",
    srcs = ["ffmpeg_cuda_runtime_test.sh"],
    args = ["$(location @ffmpeg_linux//:ffmpeg)"],
    data = [
        "@ffmpeg_linux//:ffmpeg",
        "@ffmpeg_linux//:runtime_libs",
    ],
    target_compatible_with = select({
        "@//:use_hip": ["@platforms//:incompatible"],
        "@//:use_vulkan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    tags = [
        "local",
        "requires-gpu",
    ],
)

sh_test(
    name = "opencv_backend_runtime_test",
    srcs = ["opencv_backend_runtime_test.sh"],
    args = select({
        "@//:use_hip": ["rocm", "$(location :test_cuda_blend)"],
        "@//:use_vulkan": ["vulkan", "$(location :test_cuda_blend)"],
        "//conditions:default": ["cuda", "$(location :test_cuda_blend)"],
    }),
    data = [":test_cuda_blend"],
    tags = ["local"],
)
