load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

INCLUDE_PREFIX = "cupano/cuda"

config_setting(
    name = "debug_build",
    values = {"compilation_mode": "dbg"},
)

cuda_library(
    name = "cuda_blend_cuda_lib",
    srcs = [
        "cudaBlend.cu",
        "cudaBlend3.cu",
        "cudaBlendN.cu",
        "cudaImageAdjust.cu",
        "cudaMakeFull.cu",
        "cudaRemap.cu",
        "cudaStabilize.cu",
        "cudaUtils.cu",
    ],
    hdrs = [
        "cudaUtils.cuh",
    ],
    copts = [
        "-Xcompiler=-fPIC",
        "-Xcompiler=-std=c++17",
        "-Wno-deprecated-gpu-targets",
        "-Xcompiler=-fdiagnostics-color=always",
    ] + select({
        # only in debug mode:
        ":debug_build": [
            "-Xcompiler=-O0",
            "-Xcompiler=-g",
            "-G",
            "-g",
            "-keep",
            "-O0",
        ],
        # in all other modes, no extra flags
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":cuda_blend_cuda_lib_headers",
        "//src/utils:show_image",
        "@local_cuda//:cuda_runtime",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cuda_blend_cuda_lib_headers",
    srcs = [
    ],
    hdrs = [
        "cudaBlend.h",
        "cudaBlend3.h",
        "cudaBlendN.h",
        "cudaImageAdjust.h",
        "cudaMakeFull.h",
        "cudaRemap.h",
        "cudaStatus.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    deps = [
        ":cuda_status",
        ":cuda_types",
    ],
)

cc_library(
    name = "cuda_types",
    srcs = [
    ],
    hdrs = [
        "cudaTypes.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        "@local_cuda//:cuda_runtime",
    ],
)

cc_library(
    name = "cuda_status",
    hdrs = [
        "cudaStatus.h",
    ],
    include_prefix = INCLUDE_PREFIX,
)

cc_test(
    name = "cudaBlend3_test",
    srcs = ["cudaBlend3_test.cpp"],
    deps = [
        ":cuda_blend_cuda_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
