load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/gpu"

cc_library(
    name = "gpu_runtime",
    hdrs = [
        "gpu_runtime.h",
        "gpu_gl_interop.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
)

# Headers used by HIP genrule to construct a virtual include tree
filegroup(
    name = "gpu_public_headers",
    srcs = [
        "gpu_runtime.h",
        "gpu_gl_interop.h",
    ],
    visibility = ["//visibility:public"],
)
