load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/pano"

config_setting(
    name = "aarch64-linux-gnu",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64-linux-gnu",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "cuda_matrix",
    srcs = [
        "cudaMat.cpp",
        "showImage.cpp",
        "cudaGLWindow.cpp",
    ],
    hdrs = [
        "cudaMat.h",
        "cudaMat.inl",
        "showImage.h",
        "cudaGLWindow.h",
    ],
    copts = [
    ],
    linkopts = [
      "-lglfw",
      "-lGLEW",
      "-lGL",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        "//src/cuda:cuda_blend_cuda_lib",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "canvas",
    srcs = [
        "canvasManager.cpp",
        "controlMasks.cpp",
        "canvasManager3.cpp",
        "controlMasks3.cpp",
    ],
    hdrs = [
        "canvasManager.h",
        "controlMasks.h",
        "canvasManager3.h",
        "controlMasks3.h",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
      "-ltiff",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cuda_pano",
    srcs = [
        "cudaPano.cpp",
        "cudaPano3.cpp",
    ],
    hdrs = [
        "cudaPano.h",
        "cudaPano.inl",
        "cudaPano3.h",
        "cudaPano3.inl",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        ":cuda_matrix",
        ":canvas",
    ],
)

