load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/pano"

config_setting(
    name = "aarch64-linux-gnu",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64-linux-gnu",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "cuda_matrix",
    srcs = [
        "cudaGLWindow.cpp",
        "cudaMat.cpp",
        "showImage.cpp",
    ],
    hdrs = [
        "cudaGLWindow.h",
        "cudaMat.h",
        "cudaMat.inl",
        "showImage.h",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":cv_types",
        "//src/cuda:cuda_blend_cuda_lib",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "canvas",
    srcs = [
        "canvasManager.cpp",
        "canvasManager3.cpp",
        "controlMasks.cpp",
        "controlMasks3.cpp",
    ],
    hdrs = [
        "canvasManager.h",
        "canvasManager3.h",
        "controlMasks.h",
        "controlMasks3.h",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-ltiff",
        "-lpng",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cv_types",
    hdrs = ["cvTypes.h"],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cuda_pano",
    srcs = [
        "cudaPano.cpp",
        "cudaPano3.cpp",
    ],
    hdrs = [
        "cudaPano.h",
        "cudaPano.inl",
        "cudaPano3.h",
        "cudaPano3.inl",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        ":cv_types",
        ":canvas",
        ":cuda_matrix",
    ],
)

cc_test(
  name = "cudaPano3_test",
  srcs = ["cudaPano3_test.cpp"],
  deps = [
    ":cuda_pano",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ]
)
