load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/pano"

config_setting(
    name = "aarch64-linux-gnu",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64-linux-gnu",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "cuda_matrix",
    srcs = [
        "cudaMat.cpp",
    ],
    hdrs = [
        "cudaMat.h",
        "cudaMat.inl",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = (
        [
            "//src/gpu:gpu_runtime",
            ":cv_types",
            "//src/cuda:cuda_types",
            "@opencv_linux//:opencv",
        ]
        + select({
            "@//:use_hip": ["@local_rocm//:hip_runtime"],
            "//conditions:default": ["@local_cuda//:cuda_runtime"],
        })
    ),
)

cc_library(
    name = "canvas",
    srcs = [
        "controlMasks.cpp",
        "controlMasks3.cpp",
    ],
    hdrs = [
        "controlMasks.h",
        "controlMasks3.h",
    ],
    copts = [
      "--std=c++17",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-ltiff",
        "-lpng",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":canvas_manager",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "canvas_manager",
    srcs = [
        "canvasManager.cpp",
        "canvasManager3.cpp",
    ],
    hdrs = [
        "canvasManager.h",
        "canvasManager3.h",
    ],
    copts = [
      "--std=c++17",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-ltiff",
        "-lpng",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cv_types",
    hdrs = ["cvTypes.h"],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "cuda_pano",
    srcs = [
        "cudaPano.cpp",
        "cudaPano3.cpp",
    ],
    hdrs = [
        "cudaPano.h",
        "cudaPano.inl",
        "cudaPano3.h",
        "cudaPano3.inl",
        "cudaPano3_optimized.inl",
    ],
    copts = [
    ],
    linkopts = [
      "-lstdc++fs",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        "//src/gpu:gpu_runtime",
        ":cv_types",
        ":canvas",
        ":cuda_matrix",
        "//src/utils",
    ],
    data = [
      # "//scripts:create_control_points.py",
    ],
)

cc_test(
  name = "cudaPano3_test",
  srcs = ["cudaPano3_test.cpp"],
  deps = [
    ":cuda_pano",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ]
)

cc_test(
  name = "matchSeam3_test",
  srcs = ["matchSeam3_test.cpp"],
  deps = [
    ":cuda_pano",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ]
)

cc_test(
  name = "cudaMat_basic_test",
  srcs = ["cudaMat_basic_test.cpp"],
  deps = [
    ":cuda_pano",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ],
)

# Header-only variant for N-image pano (no CUDA link), for compilation tests
cc_library(
    name = "cuda_pano_n_headers",
    hdrs = [
        "cudaPanoN.h",
        "cudaPanoN.inl",
        "canvasManagerN.h",
        "controlMasksN.h",
    ],
    copts = [
        "--std=c++17",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = [
        ":cv_types",
        ":canvas_manager",
        ":canvas",
        ":cuda_matrix",
        "//src/cuda:cuda_blend_cuda_lib_headers",
        "@opencv_linux//:opencv",
    ],
)


# Generic N-image pano library
cc_library(
    name = "cuda_pano_n",
    hdrs = [
        "cudaPanoN.h",
        "cudaPanoN.inl",
        "canvasManagerN.h",
        "controlMasksN.h",
    ],
    srcs = [
        "controlMasksN.cpp",
    ],
    copts = [
        "--std=c++17",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    deps = (
        [
            ":cv_types",
            ":canvas",
            "@opencv_linux//:opencv",
        ]
        + select({
            "@//:use_hip": ["//src/cuda:cuda_blend_cuda_lib_hip"],
            "//conditions:default": ["//src/cuda:cuda_blend_cuda_lib"],
        })
    ),
)

# Headers used by HIP genrule to construct a virtual include tree
filegroup(
    name = "pano_public_headers",
    srcs = glob([
        "*.h",
        "*.inl",
    ]),
    visibility = ["//visibility:public"],
)
