load("@rules_cuda//cuda:defs.bzl", "cuda_library")

INCLUDE_PREFIX = "stable"

cc_binary(
    name = "stabilization",
    srcs = [
        "Stabilization.cpp",
    ],
    deps = [
        ":frame_stabilizer",
    ],
)

cc_library (
  name = "frame_stabilizer",
  hdrs = [
    "FrameStabilizer.h",
  ],
  deps = [
    ":frame_stabilizer_cuda_lib",
  ],
  include_prefix = INCLUDE_PREFIX,
  visibility = ["//visibility:public"],
)

cuda_library(
    name = "frame_stabilizer_cuda_lib",
    srcs = [
        "FrameStabilizer.cu",
    ],
    hdrs = [
        "FrameStabilizer.h",
    ],
    copts = [
        "-std=c++17",
        "-Xcompiler=-fPIC",
        # "-Xcompiler=-rdynamic",
        #"-Xcompiler=-O0",
        #"-Xcompiler=-g",
        "-Wno-deprecated-gpu-targets",
        #"-G",
        #"-g",
        "-keep",
        #"-O0",
    ],
    # includes = ["."],
    visibility = ["//visibility:private"],
    deps = [
        "@opencv_linux//:opencv",
        "@local_cuda//:cuda_runtime",
    ],
)
