load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/utils"

cc_library(
    name = "utils",
    srcs = [
        "cudaBlendShow.cpp",
    ],
    hdrs = [
        "cudaBlendShow.h",
    ],
    defines = [
        "_GLIBCXX_USE_CXX11_ABI=0",
    ],
    copts = [
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-ltiff",
        "-lpng",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":show_image",
        "//src/cuda:cuda_blend_cuda_lib",
        "@opencv_linux//:opencv",
    ],
)

cc_library(
    name = "gl_window",
    srcs = [
        "cudaGLWindow.cpp",
    ],
    hdrs = [
        "cudaGLWindow.h",
    ],
    defines = [
        "_GLIBCXX_USE_CXX11_ABI=0",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
        "-I/usr/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
      "//src/pano:cuda_matrix",
      "@local_cuda//:cuda_runtime",
    ],
)

cc_library(
    name = "image_utils",
    srcs = [
        "imageUtils.cpp",
    ],
    hdrs = [
        "imageUtils.h",
    ],
    defines = [
        "_GLIBCXX_USE_CXX11_ABI=0",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
    ],
    visibility = ["//visibility:public"],
    deps = [
      ":gl_window",
      "//src/pano:cuda_matrix",
      "@local_cuda//:cuda_runtime",
    ],
)


cc_library(
    name = "show_image",
    srcs = [
        "showImage.cpp",
    ],
    hdrs = [
        "showImage.h",
    ],
    defines = [
        "_GLIBCXX_USE_CXX11_ABI=0",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
    ],
    visibility = ["//visibility:public"],
    deps = [
      ":image_utils",
      ":gl_window",
      "//src/pano:cuda_matrix",
      "@local_cuda//:cuda_runtime",
    ],
)
